
	* char-p.scm: new file, for new module (scsh char-p).
	(char-alphanumeric? char-graphic? char-printing? char-blank?
	char-control? char-punctuation? char-hex-digit? char-ascii?): moved
	from char-set.scm.
	(char-letter? char-digit? char-letter+digit? char-iso-control?
	char-symbol?): new from scsh-0.5.3.
	* init.scm, USAGE, Makefile.am, make-module-list: updated.

2001-07-30  Gary Houston  <ghouston@arglist.com>

	* char-set.scm (char:newline, char:tab, char:page, char:return,
	char:space, char:vtab): don't export, since they are not part of
	the interface in scsh 0.5.3.
	(char-alphabetic?, char-numeric?, char-lower-case?, char-upper-case?,
	char-whitespace?): removed, since all R5RS and in guile-core.

2001-07-22  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* rw.scm (generic-write-string): Fix typo in `writer' call.

2001-07-22  Gary Houston  <ghouston@arglist.com>

	* let-opt.scm (really-let-optionals*): export: a kludge to make
	let-optionals* work.

2001-07-07  Gary Houston  <ghouston@arglist.com>

	* scsh.scm (run/port, run/file, run/string, run/strings, run/sexp,
	run/sexps): don't export, they are defined in (scsh syntax).
	* rw.scm, rdelim.scm: use re-export instead of export for
	re-exporting from guile-core modules.
	* char-set.scm: remove char-set- prefix from string-iter, since
	it's no longer defined elsewhere.
	* fname.scm, rx/posixstr.scm, rx/re-subst.scm, rx/re.scm:
	use (srfi srfi-13) instead of (lib string-lib).
	* syscalls.scm, utilities.scm, fluid.scm, filesys.scm, rdelim.scm,
	rx/re.scm:
	add deprecated blocks to create bindings for features that
	override guile-core.
	USAGE: updated.

2001-07-06  Gary Houston  <ghouston@arglist.com>

	* lib/string-lib.scm: removed.
	* init.scm: load (srfi srfi-13) instead of (scsh lib string-lib).
	* Makefile.am: references to lib/string-lib.scm removed.
	* USAGE: updated.

2001-07-03  Gary Houston  <ghouston@arglist.com>

	* lib/list-lib.scm: removed.
	* Makefile.am (pkgdata_DATA): lib/list-lib.scm removed.